feat(OrganizationDomain): Implement get announcement by gropu
